<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">HoorayZone</string>

    <string name="action_settings">Settings</string>
    <string name="action_shopping_cart">Shopping Cart</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search products</string>
    <string name="action_share">Share this product</string>
    <string name="action_save_address">Save</string>

    <!-- Navigation drawer -->
    <string name="drawer_item_store_home">Store home</string>
    <string name="drawer_item_blog_feed">Newsfeed</string>
    <string name="drawer_item_wishlist">Wishlist</string>
    <string name="drawer_item_orders">My orders</string>
    <string name="drawer_item_address_book">Address book</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_sign_out">Sign out</string>

    <!-- Activity labels -->
    <string name="title_activity_products">PD.Products</string>
    <string name="title_activity_product_detail">PD.ProductDetail</string>
    <string name="title_activity_shopping_cart">Shopping Cart</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_add_new_address">New Address</string>

    <!-- Fragment labels -->
    <string name="title_fragment_sign_in">Sign in</string>
    <string name="title_fragment_sign_up">Create account</string>
    <string name="title_fragment_forgotten_password">Forgot your password?</string>
    <string name="title_fragment_store_home"></string>
    <string name="title_fragment_blog_feed">News</string>
    <string name="title_fragment_wishlist">Wishlist</string>
    <string name="title_fragment_address_book">Address book</string>
    <string name="title_fragment_order_history">My orders</string>

    <!-- Sign in / restore password fragment -->
    <string name="hint_email">E-mail address</string>
    <string name="hint_password">Password</string>
    <string name="ime_action_sign_in">Sign in</string>
    <string name="button_text_sign_in">Sign in</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="button_text_reset_password">Reset my password</string>

    <!-- Sign up fragment -->
    <string name="hint_password_sign_up">Password (min 5 characters)</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_company">Company (optional)</string>
    <string name="button_text_create_account">Create account</string>

    <!-- Shopping cart activity-->
    <string name="cart_added_date">Added on <xliff:g example="Nov 14" id="date">%1$s</xliff:g></string>
    <string name="cart_product_details">Quantity: <xliff:g example="2" id="quantity">%1$d</xliff:g></string>
    <string name="button_text_checkout">Proceed to checkout <xliff:g id="total">($%1$.2f)</xliff:g></string>

    <!-- Add to cart activity-->
    <string name="stock_availability"><xliff:g id="stock">%1$d</xliff:g> available</string>
    <string name="button_text_add_to_cart">Add to cart</string>

    <!-- Add new address activity -->
    <string name="hint_full_name">Full name</string>
    <string name="hint_address_1">Address line 1</string>
    <string name="hint_address_2">Address line 2 (optional)</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State/Province/Region</string>
    <string name="hint_zip_code">ZIP code</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="button_text_save">Save</string>

    <!-- Order history fragment -->
    <string name="order_number">Order #<xliff:g example="00001256-54898023" id="reference">%1$s</xliff:g></string>
    <string name="order_date">Placed on <xliff:g example="Nov 20, 2015" id="date">%1$s</xliff:g></string>
    <string name="order_item_count"><xliff:g example="7" id="item_count">%1$d</xliff:g> items</string>
    <string name="order_total">Order total: <xliff:g example="25.00" id="amount">$%1$.2f</xliff:g></string>
    <string name="order_status">Status: <xliff:g example="Approved" id="status">%1$s</xliff:g></string>

    <!-- Checkout activity -->
    <string name="step_shipping">Shipping</string>
    <string name="step_payment">Payment</string>
    <string name="step_review">Review</string>

    <!-- Checkout: Shipping fragment -->
    <string name="button_text_proceed_payment">Proceed to payment</string>

    <!-- Checkout: Payment fragment -->
    <string name="hint_card_number">Card number</string>
    <string name="hint_card_exp_date">MM/YY</string>
    <string name="hint_card_cvv">Security code</string>
    <string name="hint_card_holder">Name on card</string>
    <string name="button_text_proceed_review">Proceed to review</string>

    <!-- Checkout: Review fragment -->
    <string name="text_phone">Phone: <xliff:g example="+1 (305) 185.9685" id="phone_number">%1$s</xliff:g></string>
    <string name="order_summary_labels">Items <xliff:g example="?" id="item_count">(%1$d)</xliff:g>\nShipping &amp; handling\nTotal before tax\nEstimated tax</string>
    <string name="label_order_total">Order total</string>
    <string name="button_text_place_order">Place order</string>

    <!-- Navigation drawer header -->
    <string name="guest_user">Guest User</string>
    <string name="tap_to_sign_in">Tap to Sign In</string>

    <!-- Sections -->
    <string name="title_section_description">Description</string>
    <string name="title_section_available_colors">Available colors</string>
    <string name="title_section_specs">Specifications</string>
    <string name="title_section_size">Size</string>
    <string name="title_section_color">Color</string>
    <string name="title_section_quantity">Quantity</string>
    <string name="title_section_shipping">Shipping address</string>
    <string name="title_section_payment">Payment information</string>
    <string name="title_section_order_details">Order details</string>
    <string name="title_section_order_summary">Order summary</string>

    <!-- Sync adapter framework related -->
    <string name="content_authority">com.horrayzone.horrayzone.provider</string>
    <string name="account_type">com.horrayzone.horrayzone</string>
    <string name="provider_label">@string/app_name</string>

    <!-- Placeholder strings -->
    <string name="placeholder_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Integer nec eleifend arcu, eu convallis nisi. Etiam bibendum,
        tellus nec ultricies suscipit, metus justo fringilla urna, non mollis tortor libero non enim.
        Mauris sit amet venenatis risus, at ullamcorper ligula. Maecenas adipiscing non odio ut
        hendrerit. Phasellus pharetra id sapien laoreet sagittis. Etiam mattis bibendum elit.
        Vestibulum rutrum a libero eget facilisis. Duis tempor quam velit, at viverra tellus
        faucibus ut. Mauris venenatis odio sed lorem dignissim, vitae tristique arcu sagittis.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="copyright_text">\u00A9 Minpol GmBH 2018</string>
    <string name="drawer_item_forecast">Forecast</string>
    <string name="drawer_item_go_premium">Get Premium</string>
    <string name="Country">Country Trends</string>
    <string name="drawer_item_country">Histotrical Trends</string>
    <string name="shop_now">Shop Now</string>
    <string name="username">Username</string>
    <string name="forcast">Forecast</string>
    <string name="Account">Account</string>
    <string name="select_city">Select City</string>
    <string name="my_booking">My Booking</string>

    <string name="save">Save</string>
    <string name="tab1">DETAILS</string>
    <string name="tab2">PRICE</string>
    <string name="tab3">REVIEWS</string>

    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>

    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>

    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>
    <string name="step_select_ticket">Select Ticket</string>
    <string name="step_select_date">Select Date</string>
    <string name="step_select_payment">Checkout</string>
    <string name="button_text_select_date">Select Date</string>
    <string name="button_text_book">Book</string>

















    <string name="options">Options</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="scallop">Scallop</string>
    <string name="background_color">Background Color</string>
    <string name="ticket_options">Ticket Options</string>
    <string name="border">Border</string>
    <string name="divider">Divider</string>
    <string name="radius">Radius</string>
    <string name="elevation">Elevation</string>
    <string name="position_percent">Position(in %)</string>
    <string name="color">Color</string>
    <string name="width">Width</string>
    <string name="padding">Padding</string>
    <string name="enable">Enable</string>
    <string name="type">Type</string>
    <string name="dash_length">Dash Length</string>
    <string name="dash_gap">Dash Gap</string>
    <string name="ticket_attributes">Ticket Attributes</string>
    <string name="movie_title"><![CDATA[Fantastic Beast & Where to Find Them]]></string>
    <string name="movie_duration">2h 13min</string>
    <string name="movie_genre">Adventure, Fantasy, Action</string>
    <string name="movie_ticket_number">400&#8211;2000&#8211;2020</string>
    <string name="date">Date</string>
    <string name="movie_date">01&#8211;03&#8211;2017</string>
    <string name="time">Time</string>
    <string name="movie_time">23:30</string>
    <string name="seat">Seat</string>
    <string name="movie_seat">C5-C8</string>
    <string name="corners">Corners</string>
    <string name="ticket">Ticket</string>
    <string name="ticket_venue">Venue</string>
    <string name="contact">Contact</string>
    <string name="book">Book</string>
    <string name="direction">Direction</string>
    <string name="server_client_id">942594263615-usf7m8g8sph7nt9p0iarrvk1oo90lipj.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_username">Username</string>
    <string name="title_section_details">Ticket Details</string>
    <string name="buy_now">Buy Now</string>
    <string name="title_section_ticket_summary">Ticket Summary</string>
    <string name="title_section_event_details">Event Details</string>
</resources>
