<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.EventDetailActivity">

    <item android:id="@+id/action_contact"
          android:orderInCategory="1"
          android:icon="@drawable/ic_contact"
          android:title="@string/contact"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_book"
        android:orderInCategory="100"
        android:icon="@drawable/ticket"
        android:title="@string/book"

        app:showAsAction="always"/>
    <item android:id="@+id/action_direction"
        android:orderInCategory="100"
        android:icon="@drawable/direction"
        android:title="@string/direction"

        app:showAsAction="always"/>
</menu>
