<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.EventDetailActivity">


    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share"
        android:orderInCategory="100"
        android:title="@string/action_share"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save"
        android:orderInCategory="100"
        android:title="@string/save"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_contact"
        android:orderInCategory="1"
        android:title="@string/contact"
        app:showAsAction="ifRoom" />
</menu>
