<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="2dp"


    android:layout_marginBottom="2dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <com.vipulasri.ticketview.TicketView
        android:id="@+id/ticketView"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        app:borderColor="@color/colorAccent"
        app:borderWidth="1dp"
        app:cornerType="rounded"
        app:dividerPadding="0dp"
        app:dividerType="dash"
        app:orientation="horizontal"

        app:scallopRadius="10dp"
        app:showBorder="false"
        app:showDivider="true"
        app:ticketElevation="8dp" />
    <LinearLayout
        android:id="@+id/ticket_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
android:layout_marginTop="-10dp"
android:paddingLeft="5dp"
      >

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/event_qr"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center"
            app:srcCompat="@drawable/ic_qr_code" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:layout_weight="1"
           >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/event_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/event_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_genre"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey" />

        </LinearLayout>
    </LinearLayout>
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/ticket_image_layout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/primary_text" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_300" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/primary_text" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_grey_300" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_venue"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/primary_text" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/event_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>