<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_large"
        android:paddingBottom="@dimen/spacing_large">

        <!-- TODO: Add IME Action support. -->
        <android.support.v7.widget.CardView
            style="@style/Widget.HoorayZone.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/spacer_large"
                android:showDividers="beginning|middle|end">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.horrayzone.horrayzone.ui.widget.TintableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="@dimen/keyline_margin"
                        android:layout_marginStart="@dimen/keyline_margin"
                        android:src="@drawable/ic_at"
                        app:tint="@color/icon_system_default"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/useername_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/keyline_content_start"
                        android:layout_marginStart="@dimen/keyline_content_start"
                        android:layout_marginRight="@dimen/keyline_margin"
                        android:layout_marginEnd="@dimen/keyline_margin"
                        android:textColorHint="@color/text_disable">

                        <android.support.design.widget.TextInputEditText
                            style="@style/Widget.HoorayZone.EditText.FloatingLabel"
                            android:id="@+id/username_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_username"
                            android:inputType="textEmailAddress"/>

                    </android.support.design.widget.TextInputLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.horrayzone.horrayzone.ui.widget.TintableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="@dimen/keyline_margin"
                        android:layout_marginStart="@dimen/keyline_margin"
                        android:src="@drawable/ic_more_horiz"
                        app:tint="@color/icon_system_default"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/keyline_content_start"
                        android:layout_marginStart="@dimen/keyline_content_start"
                        android:layout_marginRight="@dimen/keyline_margin"
                        android:layout_marginEnd="@dimen/keyline_margin"
                        android:textColorHint="@color/text_disable">

                        <android.support.design.widget.TextInputEditText
                            style="@style/Widget.HoorayZone.EditText.FloatingLabel"
                            android:id="@+id/password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:fontFamily="sans-serif-regular"
                            android:inputType="textPassword"
                            android:imeActionLabel="@string/button_text_sign_in"
                            android:imeActionId="@+id/ime_action_sign_in"
                            android:imeOptions="actionUnspecified"
                            tools:ignore="InvalidImeActionId" />

                    </android.support.design.widget.TextInputLayout>

                </FrameLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            style="@style/Widget.HoorayZone.Button.Default"
            android:id="@+id/sign_in_button"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:enabled="false"
            android:text="@string/button_text_sign_in"/>

        <TextView
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:gravity="center_vertical"
            android:textColor="@color/text_secondary_selector"
            android:clickable="true"
            android:text="@string/button_text_forgot_password"/>

    </LinearLayout>

</ScrollView>
